# distributed-coordinator

./: .~lock.Coordinator.csv#  .~lock.coordinator_node.csv#  CMakeLists.txt  Coordinator.csv  coordinator_node.csv  package.xml
config/: params.yaml
include/coordinator/: avt_vimba_api.hpp  coordinator.hpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/coordinator/lib/coordinator/: coordinator_node
install/coordinator/share/ament_index/resource_index/package_run_dependencies/: coordinator
install/coordinator/share/ament_index/resource_index/parent_prefix_path/: coordinator
install/coordinator/share/coordinator/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/coordinator/share/coordinator/cmake/: coordinatorConfig.cmake
log/: latest_build
src/: avt_vimba_camera.cpp  coordinator.cpp  main.cpp  trigger_node.cpp
src/coordinator/: CMakeLists.txt
src/coordinator/config/: params.yaml
src/coordinator/include/coordinator/: avt_vimba_camera.hpp  coordinator.hpp
src/coordinator/launch/: coordinator_launch.py
src/coordinator/src/: coordinator (ver.ready_flag).cpp  coordinator.cpp  coordinator1.cpp  frame_observer.cpp  main.cpp
test_img/: image_splitter.py
